@@ -6,6 +6,6 @@ int main(int argc, char *argv[])
 
   if( argc < 2 ) return 1;
   printf( "entered string -> %s\n", argv[1] );
-  zRGBPrint( zRGBDec( &rgb, argv[1] ) );
+  zRGBPrint( zRGBDecodeStr( &rgb, argv[1] ) );
   return 0;
 }
