@@ -8,7 +8,7 @@ int main(int argc, char *argv[])
   if( argc < 2 ) return 1;
   printf( "entered string -> %s\n", argv[1] );
   printf( "<original RGB>\n" );
-  zRGBPrint( zRGBDec( &rgb, argv[1] ) );
+  zRGBPrint( zRGBDecodeStr( &rgb, argv[1] ) );
 
   printf( "<converted HSV>\n" );
   zRGB2HSV( &rgb, &hsv );
