@@ -16,13 +16,13 @@ zCoord2D *zCoord2DCreate(zCoord2D *coord, double x, double y, double angle)
 }
 
 /* check if two 2D coordinates are same or not. */
-bool zCoord2DEqual(zCoord2D *coord1, zCoord2D *coord2)
+bool zCoord2DEqual(const zCoord2D *coord1, const zCoord2D *coord2)
 {
   return _zCoord2DEqual( coord1, coord2 );
 }
 
 /* interior division of two 2D coordinates. */
-zCoord2D *zCoord2DInterDiv(zCoord2D *coord1, zCoord2D *coord2, double ratio, zCoord2D *coord)
+zCoord2D *zCoord2DInterDiv(const zCoord2D *coord1, const zCoord2D *coord2, double ratio, zCoord2D *coord)
 {
   zVec2DInterDiv( zCoord2DPos(coord1), zCoord2DPos(coord2), ratio, zCoord2DPos(coord) );
   zCoord2DSetAngle( coord, zCoord2DAngle(coord1)+ratio*(zCoord2DAngle(coord2)-zCoord2DAngle(coord1)) );
@@ -30,18 +30,18 @@ zCoord2D *zCoord2DInterDiv(zCoord2D *coord1, zCoord2D *coord2, double ratio, zCo
 }
 
 /* find a transformation of a 2D coordinate to another. */
-zCoord2D *zCoord2DXform(zCoord2D *src, zCoord2D *dest, zCoord2D *xform)
+zCoord2D *zCoord2DXform(const zCoord2D *src, const zCoord2D *target, zCoord2D *xform)
 {
   zVec2D d;
 
-  zCoord2DSetAngle( xform, zCoord2DAngle(dest) - zCoord2DAngle(src) );
-  zVec2DSub( zCoord2DPos(dest), zCoord2DPos(src), &d );
+  zCoord2DSetAngle( xform, zCoord2DAngle(target) - zCoord2DAngle(src) );
+  zVec2DSub( zCoord2DPos(target), zCoord2DPos(src), &d );
   zVec2DRot( &d, -zCoord2DAngle(src), zCoord2DPos(xform) );
   return xform;
 }
 
 /* cascade a 2D coordinate to another. */
-zCoord2D *zCoord2DCascade(zCoord2D *src, zCoord2D *xform, zCoord2D *dest)
+zCoord2D *zCoord2DCascade(const zCoord2D *src, const zCoord2D *xform, zCoord2D *dest)
 {
   zVec2DRot( zCoord2DPos(xform), zCoord2DAngle(src), zCoord2DPos(dest) );
   zVec2DAddDRC( zCoord2DPos(dest), zCoord2DPos(src) );
@@ -50,7 +50,7 @@ zCoord2D *zCoord2DCascade(zCoord2D *src, zCoord2D *xform, zCoord2D *dest)
 }
 
 /* print a 2D coordinate out to a file. */
-void zCoord2DFPrint(FILE *fp, zCoord2D *coord)
+void zCoord2DFPrint(FILE *fp, const zCoord2D *coord)
 {
   if( !coord ){
     fprintf( fp, "(null 2D coord)\n" );
